--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <title>Gislane Totland - Home</title>
+    <title>Gislane Totland</title>
     <meta name="GTotland" content="Resume about Gislane Totland as Developer">
     <link rel="shortcut icon" type="image/x-icon" href="images/icon.jpg">
   >
@@ -35,10 +35,10 @@
               <div class="navCollapseCol">
                 <div class="navCol">
                   <ul>
-                    <li><a id="current" href="index.html">Home</a></li>
+                    <li><a id="current" href="index.html">Hjem</a></li>
                     <li><a href="portfolio.html">Portfolio</a></li>
-                    <li><a href="aboutme.html">About me</a></li>
-                    <li><a href="contact.html">Contact</a></li>
+                    <li><a href="aboutme.html">Om meg</a></li>
+                    <li><a href="contact.html">Kontakt</a></li>
                   </ul>
                 </div>
               </div>
@@ -61,17 +61,16 @@
             </div>
             <div class="col-md">
               <div class="bannerContent">
-                <h1 class="xlTitle pb-3">Hi, I’m Gislane, <spam> Graduate Developer </spam></h1>
-                <p>I'm interested in technology, curious, willing to learn and can quickly get 
-                  acquainted with new things. I have a good mood, good communication skills and 
-                  I'm a positive person who cooperates well with others.</p>
+                <h1 class="xlTitle pb-3">Hei, jeg er Gislane, <spam> snart nyutdannet IT </spam></h1>
+                <p>Jeg er teknologinteressert, nysgjerrig, lærevillig og kjapt kan sette meg inn i nye ting. 
+                  Jeg har godt humør, gode kommunikasjons evner og jeg er en positiv person som samarbeider godt med andre.</p>
                 <div class="bannerBtnCol">
                   <div class="row">
                     <div class="col-auto">
-                      <a download href="javascript:void(0)" class="btn btnPrimary">Download Resume</a>
+                      <a download href="CV.pdf" class="btn btnPrimary">Laste ned CV</a>
                     </div>
                     <div class="col-auto">
-                      <a href="contact.html" class="btn btnOutline">Contact</a>
+                      <a href="contact.html" class="btn btnOutline">Kontakt</a>
                     </div>
                   </div>
                 </div>
@@ -89,33 +88,33 @@
           <div class="row">
             <div class="col-md-auto">
               <div class="keySkillCol">
-                <h4 class="smTitle pb-3">Key Skills</h4>
+                <h4 class="smTitle pb-3">Egenskaper</h4>
                 <div class="keySkillCard">
                   <div class="ksIconCol">
                     <img src="images/key-skill-icon-1.svg" alt="...">
                   </div>
-                  <span class="ksText">Key Skill 1</span>
+                  <span class="ksText">Nysgjerrig</span>
                 </div>
                 <div class="keySkillCard">
                   <div class="ksIconCol">
                     <img src="images/key-skill-icon-2.svg" alt="...">
                   </div>
-                  <span class="ksText">Key Skill 2</span>
+                  <span class="ksText">Samarbeidsvillig</span>
                 </div>
                 <div class="keySkillCard">
                   <div class="ksIconCol">
                     <img src="images/key-skill-icon-3.svg" alt="...">
                   </div>
-                  <span class="ksText">Key Skill 3</span>
+                  <span class="ksText">Målbevisst</span>
                 </div>
               </div>
             </div>
             <div class="col-md">
-              <h4 class="smTitle pb-3">Coding Skills</h4>
+              <h4 class="smTitle pb-3">Programmeringsspråk</h4>
               <div class="progressCol">
                 <div class="progressCard">
                   <div class="progressCol">
-                    <span class="progressLbl">Key Skill 1</span>
+                    <span class="progressLbl">HTML</span>
                     <div class="row g-2 align-items-center">
                       <div class="col">
                         <div class="progress progressStyle">
@@ -128,33 +127,33 @@
                     </div>
                   </div>
                   <div class="progressCol">
-                    <span class="progressLbl">Key Skill 2</span>
+                    <span class="progressLbl">SQL</span>
                     <div class="row g-2 align-items-center">
                       <div class="col">
                         <div class="progress progressStyle">
-                          <div class="progress-bar" role="progressbar" style="width: 85%" aria-valuenow="85" aria-valuemin="0" aria-valuemax="100"></div>
+                          <div class="progress-bar" role="progressbar" style="width: 80%" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"></div>
                         </div>
                       </div>
                       <div class="col-auto">
-                        <span class="pLbl">85%</span>
+                        <span class="pLbl">80%</span>
                       </div>
                     </div>
                   </div>
                   <div class="progressCol">
-                    <span class="progressLbl">Key Skill 3</span>
+                    <span class="progressLbl">Python</span>
                     <div class="row g-2 align-items-center">
                       <div class="col">
                         <div class="progress progressStyle">
-                          <div class="progress-bar" role="progressbar" style="width: 70%" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100"></div>
+                          <div class="progress-bar" role="progressbar" style="width: 75%" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
                         </div>
                       </div>
                       <div class="col-auto">
-                        <span class="pLbl">70%</span>
+                        <span class="pLbl">75%</span>
                       </div>
                     </div>
                   </div>
                   <div class="progressCol">
-                    <span class="progressLbl">Key Skill 4</span>
+                    <span class="progressLbl">CSS</span>
                     <div class="row g-2 align-items-center">
                       <div class="col">
                         <div class="progress progressStyle">
@@ -166,6 +165,45 @@
                       </div>
                     </div>
                   </div>
+                  <div class="progressCol">
+                    <span class="progressLbl">Javascript</span>
+                    <div class="row g-2 align-items-center">
+                      <div class="col">
+                        <div class="progress progressStyle">
+                          <div class="progress-bar" role="progressbar" style="width: 40%" aria-valuenow="40" aria-valuemin="0" aria-valuemax="100"></div>
+                        </div>
+                      </div>
+                      <div class="col-auto">
+                        <span class="pLbl">40%</span>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="progressCol">
+                    <span class="progressLbl">Django</span>
+                    <div class="row g-2 align-items-center">
+                      <div class="col">
+                        <div class="progress progressStyle">
+                          <div class="progress-bar" role="progressbar" style="width: 40%" aria-valuenow="40" aria-valuemin="0" aria-valuemax="100"></div>
+                        </div>
+                      </div>
+                      <div class="col-auto">
+                        <span class="pLbl">40%</span>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="progressCol">
+                    <span class="progressLbl">C#</span>
+                    <div class="row g-2 align-items-center">
+                      <div class="col">
+                        <div class="progress progressStyle">
+                          <div class="progress-bar" role="progressbar" style="width: 20%" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100"></div>
+                        </div>
+                      </div>
+                      <div class="col-auto">
+                        <span class="pLbl">20%</span>
+                      </div>
+                    </div>
+                  </div>       
                 </div>
               </div>
             </div>
@@ -179,10 +217,7 @@
         <div class="container">
           <div class="row pb-3">
             <div class="col">
-              <h4 class="smText regular">Certificates</h4>
-            </div>
-            <div class="col-auto">
-              <a href="javascript:void(0)" class="simpleLink">View all</a>
+              <h4 class="smText regular">I prossess...</h4>
             </div>
           </div>
           <div class="sliderOuter">
@@ -191,37 +226,41 @@
                 <div class="swiper-slide">
                   <div class="cardStyle1">
                     <h4 class="mdTitle cs1Title">
-                      <a href="javascript:void(0)">HTML, CSS, and Javascript for Web Developers</a>
+                      <a href="javascript:void(0)">Learn C#</a>
                     </h4>
                     <ul class="cardOptionCol">
-                      <li>08 Oct 2021</li>
-                      <li>Coursera</li>
+                      <li>i prossess</li>
+                      <li>Codecademy</li>
                     </ul>
-                    <p>Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit. Exercitation veniam consequat sunt nostrud amet.</p>
+                    <p>I dette kurset vil du bli utsatt for grunnleggende programmeringskonsepter 
+                      ved hjelp av C# og begynne å skrive programmer med en gang. 
+                      Du vil bygge flere prosjekter for å hjelpe deg med å øve og teste kunnskapen din ved hjelp av quizer.</p>
                   </div>
                 </div>
                 <div class="swiper-slide">
                   <div class="cardStyle1">
                     <h4 class="mdTitle cs1Title">
-                      <a href="javascript:void(0)">IBM Full Stack Cloud Developer</a>
+                      <a href="javascript:void(0)">Python for Data Science</a>
                     </h4>
                     <ul class="cardOptionCol">
-                      <li>08 Oct 2021</li>
-                      <li>Coursera</li>
+                      <li>i prosess</li>
+                      <li>DataCamp</li>
                     </ul>
-                    <p>Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit. Exercitation veniam consequat sunt nostrud amet.</p>
+                    <p>Dette kurset fokuserer på Python spesielt for datavitenskap. I introduksjon til Python-kurset vårt 
+                      vil du lære om kraftige måter å lagre og manipulere data på, 
+                      og nyttige datavitenskapelige verktøy for å begynne å utføre dine egne analyser.</p>
                   </div>
                 </div>
                 <div class="swiper-slide">
                   <div class="cardStyle1">
                     <h4 class="mdTitle cs1Title">
-                      <a href="javascript:void(0)">IBM Full Stack Cloud Developer</a>
+                      <a href="javascript:void(0)">Web developer</a>
                     </h4>
                     <ul class="cardOptionCol">
-                      <li>08 Oct 2021</li>
-                      <li>Coursera</li>
+                      <li>i prosess</li>
+                      <li>Mimo</li>
                     </ul>
-                    <p>Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit. Exercitation veniam consequat sunt nostrud amet.</p>
+                    <p>Bygg ferdighetene som trengs for å bli utvikler.</p>
                   </div>
                 </div>
               </div>
@@ -240,26 +279,29 @@
           <div class="portfolioCol">
             <div class="row pb-3">
               <div class="col">
-                <h4 class="smText regular">Featured Work</h4>
+                <h4 class="smText regular">Portfolio under bygging...</h4>
               </div>
               <div class="col-auto">
-                <a href="javascript:void(0)" class="simpleLink">View all</a>
+                <a href="javascript:void(0)" class="simpleLink">Se alle</a>
               </div>
             </div>
             <div class="portfolioCard">
               <div class="row g-4 align-items-center">
                 <div class="col-md-auto">
                   <div class="portfolioImgCol">
-                    <a href="javascript:void(0)"><img src="images/work-img.jpg" alt="..."></a>
+                    <a href="http://hyggelig.netlify.app/"><img src="images/hygge.png" alt="Innlogging Nettsiden Hygge"></a>
                   </div>
                 </div>
                 <div class="col-md">
                   <div class="portfolioContentCol">
-                    <h4 class="lgTitle"><a href="javascript:void(0)">Portfolio option 1</a></h4>
+                    <h4 class="lgTitle"><a href="http://hyggelig.netlify.app/">Hygge</a></h4>
                     <ul class="portfolioOption">
-                      <li><span class="dateLbl">2021</span></li>
+                      <li><span class="dateLbl">Høst 2021</span></li>
                     </ul>
-                    <p>Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit. Exercitation veniam consequat sunt nostrud amet.</p>
+                    <p>Hygge, en effektiv og brukervennlig nettside som knytter sammen omsorgssentre og 
+                      folk med tid til overs. Det er et utkast av et bookingsystem for frivilig som ønsker å bidra 
+                      med sosialisering. Nettsiden <a class="bold" href="http://hyggelig.netlify.app/"> hygge</a> er i produksjon.
+                    </p>
                   </div>
                 </div>
               </div>
@@ -273,7 +315,7 @@
                 </div>
                 <div class="col-md">
                   <div class="portfolioContentCol">
-                    <h4 class="lgTitle"><a href="javascript:void(0)">Portfolio option 2</a></h4>
+                    <h4 class="lgTitle"><a href="javascript:void(0)">Javascript</a></h4>
                     <ul class="portfolioOption">
                       <li><span class="dateLbl">2021</span></li>
                       <li>Django</li>
@@ -292,7 +334,7 @@
                 </div>
                 <div class="col-md">
                   <div class="portfolioContentCol">
-                    <h4 class="lgTitle"><a href="javascript:void(0)">Portfolio option 3</a></h4>
+                    <h4 class="lgTitle"><a href="javascript:void(0)">Django</a></h4>
                     <ul class="portfolioOption">
                       <li><span class="dateLbl">2021</span></li>
                       <li>Marketplace</li>
@@ -354,46 +396,9 @@
       </div>
     </section>
 
-    <section>
-      <div class="sectionSpaceSm lightBg">
-        <div class="container">
-          <div class="row pb-3">
-            <div class="col">
-              <h4 class="smText regular">Recent posts</h4>
-            </div>
-            <div class="col-auto">
-              <a href="javascript:void(0)" class="simpleLink">View all</a>
-            </div>
-          </div>
-          <div class="row g-3">
-            <div class="col-lg-6">
-              <div class="cardStyle1">
-                <h4 class="mdTitle cs1Title"><a href="javascript:void(0)">How to implement Django into your project</a></h4>
-                <ul class="cardOptionCol">
-                  <li>08 Oct 2021</li>
-                  <li>Django</li>
-                </ul>
-                <p>Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit. Exercitation veniam consequat sunt nostrud amet.</p>
-              </div>
-            </div>
-            <div class="col-lg-6">
-              <div class="cardStyle1">
-                <h4 class="mdTitle cs1Title"><a href="javascript:void(0)">Using code to structure your marketplace</a></h4>
-                <ul class="cardOptionCol">
-                  <li>08 Oct 2021</li>
-                  <li>Django</li>
-                </ul>
-                <p>Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit. Exercitation veniam consequat sunt nostrud amet.</p>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </section>
-
     
     <!-- FOOTER -->
-    <footer>
+    <footer class="lightBg">
       <div class="footerCol">
         <div class="container">
           <ul class="socialCol">
