--- a/aboutme.html
+++ b/aboutme.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <title>Gislane Totland - About me</title>
+    <title>Gislane Totland - Om meg</title>
     <meta name="GTotland" content="About me">
     <link rel="shortcut icon" type="image/x-icon" href="images/icon.jpg">
  
@@ -37,10 +37,10 @@
               <div class="navCollapseCol">
                 <div class="navCol">
                   <ul>
-                    <li><a href="index.html">Home</a></li>
+                    <li><a href="index.html">Hjem</a></li>
                     <li><a href="portfolio.html">Portfolio</a></li>
-                    <li><a id="current" href="aboutme.html">About me</a></li>
-                    <li><a href="contact.html">Contact</a></li>
+                    <li><a id="current" href="aboutme.html">Om meg</a></li>
+                    <li><a href="contact.html">Kontakt</a></li>
                   </ul>
                 </div>
               </div>
@@ -62,7 +62,7 @@
           <div class="row g-4 g-md-3  align-items-center">
             <div class="col-md-6">
               <div class="bannerContent">
-                <h1 class="xlTitle pb-md-3">Comming soon...</h1>
+                <h1 class="xlTitle pb-md-3">Kommer snart...</h1>
               </div>
             </div>
           </div>
