--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <div class="container-fluid">
           <div class="row align-items-center">
             <div class="col-auto">
-              <div class="logoCol"><a href="index.html"><img src="images/logo.png" alt="..."></a></div>
+              <div class="logoCol"><a href="index.html"><img src="images/logo.png" alt="GTotland logo"></a></div>
             </div>
             <div class="col">
               <div class="d-md-none">
@@ -56,7 +56,7 @@
           <div class="row g-4 g-md-3  align-items-center">
             <div class="col-md-auto order-md-last">
               <div class="bannerUserImg">
-                <img src="images/user-img.jpg" alt="...">
+                <img src="images/user-img.jpg" alt="Bildet av Gislane">
               </div>
             </div>
             <div class="col-md">
@@ -282,14 +282,14 @@
                 <h4 class="smText regular">Portfolio under bygging...</h4>
               </div>
               <div class="col-auto">
-                <a href="javascript:void(0)" class="simpleLink">Se alle</a>
+                <a target=”_blank” href="https://github.com/gislanetotland" class="simpleLink">Se alle</a>
               </div>
             </div>
             <div class="portfolioCard">
               <div class="row g-4 align-items-center">
                 <div class="col-md-auto">
                   <div class="portfolioImgCol">
-                    <a href="http://hyggelig.netlify.app/"><img src="images/hygge.png" alt="Innlogging Nettsiden Hygge"></a>
+                    <a target=”_blank” href="http://hyggelig.netlify.app/"><img src="images/hygge.png" alt="Innlogging Nettsiden Hygge"></a>
                   </div>
                 </div>
                 <div class="col-md">
@@ -300,7 +300,7 @@
                     </ul>
                     <p>Hygge, en effektiv og brukervennlig nettside som knytter sammen omsorgssentre og 
                       folk med tid til overs. Det er et utkast av et bookingsystem for frivilig som ønsker å bidra 
-                      med sosialisering. Nettsiden <a class="bold" href="http://hyggelig.netlify.app/"> hygge</a> er i produksjon.
+                      med sosialisering. Nettsiden <a class="bold" target=”_blank” href="http://hyggelig.netlify.app/"> hygge</a> er i produksjon.
                     </p>
                   </div>
                 </div>
