--- a/portfolio.html
+++ b/portfolio.html
@@ -47,10 +47,10 @@
               <div class="navCollapseCol">
                 <div class="navCol">
                   <ul>
-                    <li><a href="index.html">Home</a></li>
+                    <li><a href="index.html">Hjem</a></li>
                     <li><a id="current" href="portfolio.html">Portfolio</a></li>
-                    <li><a href="aboutme.html">About me</a></li>
-                    <li><a href="contact.html">Contact</a></li>
+                    <li><a href="aboutme.html">Om meg</a></li>
+                    <li><a href="contact.html">Kontakt</a></li>
                   </ul>
                 </div>
               </div>
@@ -72,7 +72,10 @@
           <div class="row g-4 g-md-3  align-items-center">
             <div class="col-md-6">
               <div class="bannerContent">
-                <h1 class="xlTitle pb-md-3">Comming soon...</h1>
+                <h1 class="xlTitle pb-md-3">Portfolio under bygging....</h1>
+                <p>
+                  <a class="btn btnOutline" target="_blank" href="https://github.com/gislanetotland"> GitHub portfolio</a>
+                </p>
               </div>
             </div>
           </div>
@@ -87,7 +90,7 @@
             <div class="row g-3 g-md-4 g-lg-5 portfolioRow">
               <div class="col-md-6 pColMain">
                 <div class="pCol">
-                  <img src="images/project-img.jpg" alt="..." class="pImg">
+                  <a target="_blank" href="http://hyggelig.netlify.app/"><img src="images/hygge.png" alt="Innlogging Nettsiden Hygge" class="pImg"></a>
                 </div>
               </div>
               <div class="col-md-6 pColMain">
