--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en">
+<html lang="nb">
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -24,7 +24,7 @@
         <div class="container-fluid">
           <div class="row align-items-center">
             <div class="col-auto">
-              <div class="logoCol"><a href="index.html"><img src="images/logo.png" alt="GTotland logo"></a></div>
+              <div class="logoCol"><a href="index.html"><img src="images/logo.png" alt="..."></a></div>
             </div>
             <div class="col">
               <div class="d-md-none">
@@ -56,7 +56,7 @@
           <div class="row g-4 g-md-3  align-items-center">
             <div class="col-md-auto order-md-last">
               <div class="bannerUserImg">
-                <img src="images/user-img.jpg" alt="Bildet av Gislane">
+                <img src="images/user-img.jpg" alt="...">
               </div>
             </div>
             <div class="col-md">
@@ -65,9 +65,9 @@
                 <p>Jeg er teknologinteressert, nysgjerrig, lærevillig og kjapt kan sette meg inn i nye ting. 
                   Jeg har godt humør, gode kommunikasjons evner og jeg er en positiv person som samarbeider godt med andre.</p>
                 <div class="bannerBtnCol">
-                  <div class="row">
+                  <div class="row center">
                     <div class="col-auto">
-                      <a download href="CV.pdf" class="btn btnPrimary">Laste ned CV</a>
+                      <a download href="CV_G_Totland.pdf" class="btn btnPrimary">Laste ned CV</a>
                     </div>
                     <div class="col-auto">
                       <a href="contact.html" class="btn btnOutline">Kontakt</a>
@@ -217,7 +217,7 @@
         <div class="container">
           <div class="row pb-3">
             <div class="col">
-              <h4 class="smText regular">I prossess...</h4>
+              <h4 class="smText regular">Kurs / tutorial i prosess...</h4>
             </div>
           </div>
           <div class="sliderOuter">
@@ -229,7 +229,7 @@
                       <a href="javascript:void(0)">Learn C#</a>
                     </h4>
                     <ul class="cardOptionCol">
-                      <li>i prossess</li>
+                      <li>Pågår</li>
                       <li>Codecademy</li>
                     </ul>
                     <p>I dette kurset vil du bli utsatt for grunnleggende programmeringskonsepter 
@@ -243,7 +243,7 @@
                       <a href="javascript:void(0)">Python for Data Science</a>
                     </h4>
                     <ul class="cardOptionCol">
-                      <li>i prosess</li>
+                      <li>Pågår</li>
                       <li>DataCamp</li>
                     </ul>
                     <p>Dette kurset fokuserer på Python spesielt for datavitenskap. I introduksjon til Python-kurset vårt 
@@ -254,10 +254,26 @@
                 <div class="swiper-slide">
                   <div class="cardStyle1">
                     <h4 class="mdTitle cs1Title">
+                      <a href="javascript:void(0)">Responsive Webdesign</a>
+                    </h4>
+                    <ul class="cardOptionCol">
+                      <li>Pågår</li>
+                      <li>freeCodeCamp</li>
+                    </ul>
+                    <p>Først skal du bygge en kattefotoapp for å lære det grunnleggende om HTML og CSS. 
+                      Senere vil du lære moderne teknikker som CSS-variabler ved å bygge en pingvin, 
+                      og beste praksis for tilgjengelighet ved å bygge et nettskjema.</p>
+                     <p>Til slutt vil du lære hvordan du lager nettsider som reagerer på forskjellige skjermstørrelser 
+                       ved å bygge et Twitter-kort med Flexbox, og et komplekst bloggoppsett med CSS Grid.</p>
+                  </div>
+                </div>
+                <div class="swiper-slide">
+                  <div class="cardStyle1">
+                    <h4 class="mdTitle cs1Title">
                       <a href="javascript:void(0)">Web developer</a>
                     </h4>
                     <ul class="cardOptionCol">
-                      <li>i prosess</li>
+                      <li>Pågår</li>
                       <li>Mimo</li>
                     </ul>
                     <p>Bygg ferdighetene som trengs for å bli utvikler.</p>
@@ -279,74 +295,82 @@
           <div class="portfolioCol">
             <div class="row pb-3">
               <div class="col">
-                <h4 class="smText regular">Portfolio under bygging...</h4>
+                <h4 class="smText regular">Prosjekter</h4>
               </div>
               <div class="col-auto">
-                <a target=”_blank” href="https://github.com/gislanetotland" class="simpleLink">Se alle</a>
+                <a target="_blank" href="portfolio.html" class="simpleLink">Se alle</a>
               </div>
             </div>
             <div class="portfolioCard">
               <div class="row g-4 align-items-center">
                 <div class="col-md-auto">
                   <div class="portfolioImgCol">
-                    <a target=”_blank” href="http://hyggelig.netlify.app/"><img src="images/hygge.png" alt="Innlogging Nettsiden Hygge"></a>
+                    <a target="_blank" href="https://nygaardsparken.netlify.app/"><img src="images/Nygårdsparken.png" alt="..."></a>
                   </div>
                 </div>
                 <div class="col-md">
                   <div class="portfolioContentCol">
-                    <h4 class="lgTitle"><a href="http://hyggelig.netlify.app/">Hygge</a></h4>
+                    <h4 class="lgTitle"><a target="_blank" href="https://nygaardsparken.netlify.app/">Webdesign prosjekt</a></h4>
                     <ul class="portfolioOption">
                       <li><span class="dateLbl">Høst 2021</span></li>
+                      <li>HTML / CSS</li>
+                    </ul>
+                    <p>"Your project must show that you are able to create a web site that offers information about a certain aspect of reality. 
+                      You must show that you are able to shape this information and make it accessible to a certain user group. 
+                      You must show that you are able to embed it in the wider context of web with its conventions (design, navigation), 
+                      functions (social media, links, feedback) and already existing information."</p>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="portfolioCard">
+              <div class="row g-4 align-items-center">
+                <div class="col-md-auto">
+                  <div class="portfolioImgCol">
+                    <a target="_blank" href="http://hyggelig.netlify.app/"><img src="images/hygge.png" alt="Innlogging Nettsiden Hygge"></a>
+                  </div>
+                </div>
+                <div class="col-md">
+                  <div class="portfolioContentCol">
+                    <h4 class="lgTitle"><a target="_blank" href="http://hyggelig.netlify.app/">Hygge</a></h4>
+                    <ul class="portfolioOption">
+                      <li><span class="dateLbl">Høst 2021</span></li>
+                      <li>HTML / CSS / Javascript</li>
                     </ul>
                     <p>Hygge, en effektiv og brukervennlig nettside som knytter sammen omsorgssentre og 
                       folk med tid til overs. Det er et utkast av et bookingsystem for frivilig som ønsker å bidra 
-                      med sosialisering. Nettsiden <a class="bold" target=”_blank” href="http://hyggelig.netlify.app/"> hygge</a> er i produksjon.
+                      med sosialisering. Nettsiden <a target="_blank" class="bold" href="http://hyggelig.netlify.app/"> hygge</a> er i produksjon.
                     </p>
                   </div>
                 </div>
               </div>
             </div>
+           
             <div class="portfolioCard">
               <div class="row g-4 align-items-center">
                 <div class="col-md-auto">
                   <div class="portfolioImgCol">
-                    <a href="javascript:void(0)"><img src="images/work-img.jpg" alt="..."></a>
+                    <a href="https://github.com/gislanetotland/Airport_airline_DATA150"><img src="images/airport.png" alt="..."></a>
                   </div>
                 </div>
                 <div class="col-md">
                   <div class="portfolioContentCol">
-                    <h4 class="lgTitle"><a href="javascript:void(0)">Javascript</a></h4>
+                    <h4 class="lgTitle"><a href="javascript:void(0)">Jupiter</a></h4>
                     <ul class="portfolioOption">
-                      <li><span class="dateLbl">2021</span></li>
-                      <li>Django</li>
+                      <li><span class="dateLbl">Høst 2021</span></li>
+                      <li>Python</li>
                     </ul>
-                    <p>Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit. Exercitation veniam consequat sunt nostrud amet.</p>
-                  </div>
-                </div>
-              </div>
-            </div>
-            <div class="portfolioCard">
-              <div class="row g-4 align-items-center">
-                <div class="col-md-auto">
-                  <div class="portfolioImgCol">
-                    <a href="javascript:void(0)"><img src="images/work-img.jpg" alt="..."></a>
-                  </div>
-                </div>
-                <div class="col-md">
-                  <div class="portfolioContentCol">
-                    <h4 class="lgTitle"><a href="javascript:void(0)">Django</a></h4>
-                    <ul class="portfolioOption">
-                      <li><span class="dateLbl">2021</span></li>
-                      <li>Marketplace</li>
-                    </ul>
-                    <p>Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit. Exercitation veniam consequat sunt nostrud amet.</p>
+                    <p>The goal of the assignment is to do the exploratory data analysis on your selected datasets. 
+                      The purpose of this analysis to explain your dataset to someone who is interested in the topic 
+                      the dataset is collected for and highlight the interesting properties of the dataset through charts, slices, and summaries. 
+                      The analysisshould reveal interesting aspects of the data (e.g. worst reviewed airports have this and that properties).</p>
                   </div>
                 </div>
               </div>
             </div>
           </div>
           <div class="testimonialCol">
-            <h4 class="smText regular d-block">Testimonials</h4>
+            <h4 class="smText regular d-block">Testimonials (kommer snart...)</h4>
             <div class="testimonialSlider">
               <div class="swiper testimonialSwiper">
                 <div class="swiper-wrapper">
