--- a/portfolio.html
+++ b/portfolio.html
@@ -8,29 +8,18 @@
     <meta name="GTotland" content="Portfolio">
     <link rel="shortcut icon" type="image/x-icon" href="images/icon.jpg">
 
-   <!--
-    <link rel="canonical" href=""/>
-    <link rel="home" href=""/>
-    <meta name="description" content="">
-    <meta name="keywords" content="">
--->
 
-    <!-- ================================
-    Start CSS
-    ================================= -->
+
+    <!--  CSS links -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://unpkg.com/swiper@7.0.5/swiper-bundle.min.css">
     <link href="css/style.css" rel="stylesheet">
-    <!-- ================================
-    End CSS
-    ================================= -->
+   
 
   </head>
   <body>
 
-    <!-- ================================
-    Start Navigation Bar
-    ================================= -->
+    <!-- Navigation Bar -->
     <header>
       <div class="headerCol">
         <div class="container-fluid">
@@ -59,9 +48,6 @@
         </div>
       </div>
     </header>
-    <!-- ================================
-    End Navigation Bar
-    ================================= -->
 
     <!-- Main Content-->
     <main>
