--- a/portfolio.html
+++ b/portfolio.html
@@ -57,7 +57,7 @@
             <div class="row g-4 g-md-3  align-items-center">
               <div class="col-md-6">
                 <div class="bannerContent">
-                  <h1 class="xlTitle pb-md-3">Portfolio under bygging....</h1>
+                  <h1 class="xlTitle pb-md-3">Portfolio</h1>
                   <p>
                     <a class="btn btnOutline" target="_blank" href="https://github.com/gislanetotland"> GitHub portfolio</a>
                   </p>
