--- a/portfolio.html
+++ b/portfolio.html
@@ -50,7 +50,7 @@
     </header>
 
     <!-- Main Content-->
-    <main>
+    <main class="opacity">
       <section>
         <div class="innerPageBannerCol">
           <div class="container">
