--- a/aboutme.html
+++ b/aboutme.html
@@ -9,7 +9,7 @@
     <link rel="shortcut icon" type="image/x-icon" href="images/icon.jpg">
  
 
-    <!-- Start CSS -->
+    <!-- CSS links -->
 
     <link href="css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://unpkg.com/swiper@7.0.5/swiper-bundle.min.css">
@@ -18,9 +18,7 @@
   </head>
   <body>
 
-    <!-- ================================
-    Start Navigation Bar
-    ================================= -->
+    <!--  Navigation Bar -->
     <header>
       <div class="headerCol">
         <div class="container-fluid">
@@ -49,70 +47,66 @@
         </div>
       </div>
     </header>
-    <!-- ================================
-    End Navigation Bar
-    ================================= -->
 
-    <!-- ================================
-    Start Content
-    ================================= -->
-    <section>
-      <div class="innerPageBannerCol">
-        <div class="container">
-          <div class="row g-4 g-md-3  align-items-center">
-            <div class="col-md-6">
-              <div class="bannerContent">
-                <h1 class="xlTitle pb-md-3">Kommer snart...</h1>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </section>
-
-    <section>
-      <div class="lightBg">
-        <div class="container">
-          <div class="portfolioContentMain">
-            <div class="row g-3 g-md-4 g-lg-5 portfolioRow">
-              <div class="col-md-6 pColMain">
-                <div class="pCol">
-                  <img src="images/project-img.jpg" alt="..." class="pImg">
-                </div>
-              </div>
-              <div class="col-md-6 pColMain">
-                <div class="pCol">
-                  <img src="images/project-img.jpg" alt="..." class="pImg">
-                </div>
-              </div>
-              <div class="col-md-6 pColMain">
-                <div class="pCol">
-                  <img src="images/project-img.jpg" alt="..." class="pImg">
-                </div>
-              </div>
-              <div class="col-md-6 pColMain">
-                <div class="pCol">
-                  <img src="images/project-img.jpg" alt="..." class="pImg">
-                </div>
-              </div>
-              <div class="col-md-6 pColMain">
-                <div class="pCol">
-                  <img src="images/project-img.jpg" alt="..." class="pImg">
-                </div>
-              </div>
-              <div class="col-md-6 pColMain">
-                <div class="pCol">
-                  <img src="images/project-img.jpg" alt="..." class="pImg">
+    <!-- Main Content -->
+    <main class="opacity">
+      <section>
+        <div class="innerPageBannerCol">
+          <div class="container">
+            <div class="row g-4 g-md-3  align-items-center">
+              <div class="col-md-6">
+                <div class="bannerContent">
+                  <h1 class="xlTitle pb-md-3">Kommer snart...</h1>
                 </div>
               </div>
             </div>
           </div>
         </div>
-      </div>
-    </section>
-    <!-- ================================
-    End Content
-    ================================= -->
+      </section>
+  
+      <section>
+        <div class="lightBg">
+          <div class="container">
+            <div class="portfolioContentMain">
+              <div class="row g-3 g-md-4 g-lg-5 portfolioRow">
+                <div class="col-md-6 pColMain">
+                  <div class="pCol">
+                    <img src="images/project-img.jpg" alt="..." class="pImg">
+                  </div>
+                </div>
+                <div class="col-md-6 pColMain">
+                  <div class="pCol">
+                    <img src="images/project-img.jpg" alt="..." class="pImg">
+                  </div>
+                </div>
+                <div class="col-md-6 pColMain">
+                  <div class="pCol">
+                    <img src="images/project-img.jpg" alt="..." class="pImg">
+                  </div>
+                </div>
+                <div class="col-md-6 pColMain">
+                  <div class="pCol">
+                    <img src="images/project-img.jpg" alt="..." class="pImg">
+                  </div>
+                </div>
+                <div class="col-md-6 pColMain">
+                  <div class="pCol">
+                    <img src="images/project-img.jpg" alt="..." class="pImg">
+                  </div>
+                </div>
+                <div class="col-md-6 pColMain">
+                  <div class="pCol">
+                    <img src="images/project-img.jpg" alt="..." class="pImg">
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+    </main>
+    
+
     
   <!-- FOOTER -->
   <footer>
@@ -132,15 +126,11 @@
     </div>
   </footer>
 
-    <!-- ================================
-    Start Scripts
-    ================================= -->
+    <!-- Scripts -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <script src="js/bootstrap.bundle.min.js"></script>
     <script src="https://unpkg.com/swiper@7.0.5/swiper-bundle.min.js"></script>
     <script src="js/script.js"></script>
-    <!-- ================================
-    End Scripts
-    ================================= -->
+   
   </body>
 </html>
