--- a/aboutme.html
+++ b/aboutme.html
@@ -81,7 +81,7 @@
                   <div class="pCol">
                     <article class="background">
                         Jeg kommer fra Brasil, nemlig fra Rio de Janeiro. 
-                        Jeg har studert TI i Brasil men jeg har ikke fullført bachelorgrad.
+                        Jeg har studert IT i Brasil men jeg har ikke fullført bachelorgrad.
                         Så flyttet jeg til Norge for 10 år siden på grunn av kjærlighet.
                         Jeg er gift og har et barn som går i 2.klasse. 
                     </article>
