--- a/aboutme.html
+++ b/aboutme.html
@@ -90,7 +90,7 @@
                 <div class="col-md-6 pColMain">
                   <div class="pCol">
                     <p>Vi bor i Samnanger.
-                        Det tar ca. 35 minutter å kjøre til Arna togstasjon, deretter er det 
+                        Det tar ca. 30 minutter å kjøre til Arna togstasjon, deretter er det 
                         max 8 minutter med tog til Bergen fra Arna.
                     </p>
                   </div>
@@ -116,7 +116,7 @@
                   <div class="pCol"> 
                     <article class="fritid">
                       <p>Selv om jeg ikke kan spille håndball, er jeg håndballtrener for jenter 7/8 år. 
-                      Jeg er også kasserer for fotballgruppe. 
+                      Jeg er med i samnanger fotballgruppe Styret hvor jeg er kasserer og nettsideradministrator.
                       Ellers så i fritiden min, liker jeg å gå på tur i fjellet.</p>
                       
                     </article>
