--- a/aboutme.html
+++ b/aboutme.html
@@ -116,7 +116,7 @@
                   <div class="pCol"> 
                     <article class="fritid">
                       <p>Selv om jeg ikke kan spille håndball, er jeg håndballtrener for jenter 7/8 år. 
-                      Jeg er med i samnanger fotballgruppe Styret hvor jeg er kasserer og nettsideradministrator.
+                      Jeg er med i Styret til Samnanger Fotballgruppe hvor jeg er kasserer og nettsideradministrator / redaktør.
                       Ellers så i fritiden min, liker jeg å gå på tur i fjellet.</p>
                       
                     </article>
