--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
                   <div class="bannerBtnCol">
                     <div class="row center">
                       <div class="col-auto">
-                        <a download href="CV_G_Totland.pdf" class="btn btnPrimary">Laste ned CV</a>
+                        <a download href="CV_GislaneTotland.pdf" class="btn btnPrimary">Laste ned CV</a>
                       </div>
                       <div class="col-auto">
                         <a href="contact.html" class="btn btnOutline">Kontakt</a>
