--- a/aboutme.html
+++ b/aboutme.html
@@ -166,6 +166,10 @@
         <div class="copyrightCol">
           <p>Copyright ©2022 All rights reserved. Designed by <a href="https://www.linkedin.com/in/gislane-totland/" target="_blank">Gislane Totland</a></p>
         </div>
+        <!-- hitwebcounter Code START -->
+          <a href="https://www.hitwebcounter.com" target="_blank">
+          <img src="https://hitwebcounter.com/counter/counter.php?page=7980343&style=0008&nbdigits=2&type=page&initCount=0" 
+               title="Free Counter" Alt="web counter" border="0" /></a> 
       </div>
     </div>
   </footer>
