--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
               </div>
               <div class="col-md">
                 <div class="bannerContent">
-                  <h1 class="xlTitle pb-3">Hei, jeg er Gislane, <spam> IT-konsulent hos SILVER LININGIT med arbeidssted i DNB</spam></h1>
+                  <h1 class="xlTitle pb-3">Hei, jeg er Gislane, <spam> IT-konsulent </spam></h1>
                   <p>Jeg er teknologinteressert, nysgjerrig, lærevillig og kjapt kan sette meg inn i nye ting. 
                     Jeg har godt humør, gode kommunikasjons evner og jeg er en positiv person som samarbeider godt med andre.</p>
                   <div class="bannerBtnCol">
